# terminal_ai

./: .gitignore  README.md  chat.py  main.py  pyproject.toml  setup.py
ai_core/: chat.py  message.py  model.py  util.py
alias/: ALIAS-README.md  alias.py  setup.py
app/: app.py  chat_core.py  chat_manager.py  config_manager.py  constants.py  main.py  model_manager.py
backend/: message.py  model.py  template.py  util.py
src/ai_core/: chat.py  message.py  model.py  template.py  util.py
src/app/: chat_core.py  chat_manager.py  config_manager.py  constants.py  main.py  model_manager.py  util.py
